fix:Collection added to cors config method to support list of Strings that are allowed to connect to Backend